<resources>
    <string name="app_name">Splitter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>

    <string name="toolbar_sign_out">Sign Out</string>
    <string name="aboutSplitter">About</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_add_friends">Add Friends</string>
    <string name="action_create_group">Create a group</string>
    <string name="action_Logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact Us</string>
    <string name="menu_rate">Like Us ? We love to hear 😊 </string>
    <string name="menu_logout">Log out</string>
    <string name="menu_message">Made with ❤️ from India </string>
    <string name="menu_copyright">Copyright © 2020 Sreejith Thrivikraman </string>
    <string name="menu_version">v1.0 </string>

    <string name="saved_user_email">userEmail</string>
    <string name="home_second">Home Second</string>
</resources>
